# PrusaSlicer_GcodeRenderer

./: .gitignore  1_Shape-Box_0.4n_0.2mm_PLA_MK4IS_20m.gcode
pygcode_viewer/: .gitignore  CMakeLists.txt  README.md  build.sh  camera_intrinsic.json  pyproject.toml
pygcode_viewer/camera_calib/: camera_intrinsic.json  camera_intrinsic.yaml  intrinsic_calibration.py
pygcode_viewer/examples/: basic_render.py  calibrate_offset.py  custom_colors.py  layer_animation.py  prusa_style_visualization.py  visualize_benchy.py  visualize_box.py  visualize_z54.py
pygcode_viewer/pygcode_viewer/: __init__.py
pygcode_viewer/scripts/: batch_visualize.py  pnp.py  pnp_annot.py  render_baseline.py  run_batch.sh
pygcode_viewer/src/: bed_renderer.cpp  bed_renderer.hpp  bindings.cpp  camera.cpp  camera.hpp  config_parser.cpp  config_parser.hpp  framebuffer_renderer.cpp  framebuffer_renderer.hpp  gcode_parser.cpp  gcode_parser.hpp  gcode_viewer.cpp  gcode_viewer.hpp  headless_context.cpp  headless_context.hpp
pygcode_viewer/tests/: H_cam.json  __init__.py  sample.gcode  sample_config.json  test_basic.py
render_matcher/: README.md  pyproject.toml
render_matcher/configs/: default.yaml
render_matcher/render_matcher/: __init__.py  augmentations.py  config.py  dataset.py  model.py  trainer.py  visualization.py
render_matcher/scripts/: train.py
