[build-system]
requires = ["scikit-build-core>=0.4", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "pygcode-viewer"
version = "0.1.0"
description = "Python wrapper for PrusaSlicer's GCode visualization"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.8"
authors = [
    {name = "PrusaSlicer Contributors"}
]
keywords = ["gcode", "3d-printing", "visualization", "slicer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "numpy"]

[project.urls]
Homepage = "https://github.com/prusa3d/PrusaSlicer"
Repository = "https://github.com/prusa3d/PrusaSlicer"

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
wheel.packages = ["pygcode_viewer"]
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
PYGCODE_BUILD_PYTHON = "ON"
